# SimpleScraper-

./: .gitignore  CMakeLists.txt  README.md
src/: article-links.hxx  articles.hxx  curl.hxx  http-get.hxx  items.pb.cc  items.pb.h  items.proto  main.cpp  node.hxx  pretty-print.hxx  redis-http.hxx
